# requests-unifi-auth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bump-version.yml  test.yml
src/requests_unifi_auth/: __init__.py  auth.py  cli.py
src/unifi_requests/: auth.py
tests/: conftest.py  test_auth.py
